--- a/content/publication/2020/DSP/cite.bib
+++ b/content/publication/2020/DSP/cite.bib
@@ -1,13 +1,13 @@
-@article{LOPEZPEREZ2022106783,
-title = {Deep Gaussian processes for multiple instance learning: Application to CT intracranial hemorrhage detection},
-journal = {Computer Methods and Programs in Biomedicine},
-volume = {219},
-pages = {106783},
-year = {2022},
-issn = {0169-2607},
-doi = {https://doi.org/10.1016/j.cmpb.2022.106783},
-url = {https://www.sciencedirect.com/science/article/pii/S0169260722001699},
-author = {Miguel López-Pérez and Arne Schmidt and Yunan Wu and Rafael Molina and Aggelos K. Katsaggelos},
-keywords = {Multiple instance learning, Deep Gaussian processes, Intracranial hemorrhage detection, Weakly supervised learning},
-abstract = {Background and objective: Intracranial hemorrhage (ICH) is a life-threatening emergency that can lead to brain damage or death, with high rates of mortality and morbidity. The fast and accurate detection of ICH is important for the patient to get an early and efficient treatment. To improve this diagnostic process, the application of Deep Learning (DL) models on head CT scans is an active area of research. Although promising results have been obtained, many of the proposed models require slice-level annotations by radiologists, which are costly and time-consuming. Methods: We formulate the ICH detection as a problem of Multiple Instance Learning (MIL) that allows training with only scan-level annotations. We develop a new probabilistic method based on Deep Gaussian Processes (DGP) that is able to train with this MIL setting and accurately predict ICH at both slice- and scan-level. The proposed DGPMIL model is able to capture complex feature relations by using multiple Gaussian Process (GP) layers, as we show experimentally. Results: To highlight the advantages of DGPMIL in a general MIL setting, we first conduct several controlled experiments on the MNIST dataset. We show that multiple GP layers outperform one-layer GP models, especially for complex feature distributions. For ICH detection experiments, we use two public brain CT datasets (RSNA and CQ500). We first train a Convolutional Neural Network (CNN) with an attention mechanism to extract the image features, which are fed into our DGPMIL model to perform the final predictions. The results show that DGPMIL model outperforms VGPMIL as well as the attention-based CNN for MIL and other state-of-the-art methods for this problem. The best performing DGPMIL model reaches an AUC-ROC of 0.957 (resp. 0.909) and an AUC-PR of 0.961 (resp. 0.889) on the RSNA (resp. CQ500) dataset. Conclusion: The competitive performance at slice- and scan-level shows that DGPMIL model provides an accurate diagnosis on slices without the need for slice-level annotations by radiologists during training. As MIL is a common problem setting, our model can be applied to a broader range of other tasks, especially in medical image classification, where it can help the diagnostic process.}
+@article{PEREZBUENO2020102727,
+title = {A TV-based image processing framework for blind color deconvolution and classification of histological images},
+journal = {Digital Signal Processing},
+volume = {101},
+pages = {102727},
+year = {2020},
+issn = {1051-2004},
+doi = {https://doi.org/10.1016/j.dsp.2020.102727},
+url = {https://www.sciencedirect.com/science/article/pii/S1051200420300725},
+author = {Fernando Pérez-Bueno and Miguel López-Pérez and Miguel Vega and Javier Mateos and Valery Naranjo and Rafael Molina and Aggelos K. Katsaggelos},
+keywords = {Blind color deconvolution, Histopathological images, Variational Bayes, Prostate cancer},
+abstract = {In digital histopathological image analysis, two conflicting objectives are often pursued: closeness to the original tissue and high classification performance. The former objective tries to recover images (stains) that are as close as possible to the ones obtained by staining the tissue with a single dye. The latter objective requires images that allow the extraction of better features for an improved classification, even if their appearance is not close to single stained tissues. In this paper we propose a framework that achieves both objectives depending on the number of stains used to mathematically decompose the scanned image. The proposed framework uses a total variation prior for each stain together with the similarity to a given reference color-vector matrix. Variational inference and an evidence lower bound are utilized to automatically estimate all the latent variables and model parameters. The proposed methodology is tested on real images and compared to classical and state-of-the-art methods for histopathological blind image color deconvolution and prostate cancer classification.}
 }
