--- a/content/publication/2023/CMIG1/cite.bib
+++ b/content/publication/2023/CMIG1/cite.bib
@@ -1,8 +1,13 @@
-@inproceedings{lopez2023crowdsourcing,
-  title={Crowdsourcing Segmentation of Histopathological Images Using Annotations Provided by Medical Students},
-  author={L{\'o}pez-P{\'e}rez, Miguel and Morales-{\'A}lvarez, Pablo and Cooper, Lee AD and Molina, Rafael and Katsaggelos, Aggelos K},
-  booktitle={International Conference on Artificial Intelligence in Medicine},
-  pages={245--249},
-  year={2023},
-  organization={Springer}
+@article{KANWAL2024102321,
+title = {Are you sure it’s an artifact? Artifact detection and uncertainty quantification in histological images},
+journal = {Computerized Medical Imaging and Graphics},
+volume = {112},
+pages = {102321},
+year = {2024},
+issn = {0895-6111},
+doi = {https://doi.org/10.1016/j.compmedimag.2023.102321},
+url = {https://www.sciencedirect.com/science/article/pii/S0895611123001398},
+author = {Neel Kanwal and Miguel López-Pérez and Umay Kiraz and Tahlita C.M. Zuiverloon and Rafael Molina and Kjersti Engan},
+keywords = {Artifact detection, Computational pathology, Deep learning, Gaussian processes, Whole Slide Images},
+abstract = {Modern cancer diagnostics involves extracting tissue specimens from suspicious areas and conducting histotechnical procedures to prepare a digitized glass slide, called Whole Slide Image (WSI), for further examination. These procedures frequently introduce different types of artifacts in the obtained WSI, and histological artifacts might influence Computational Pathology (CPATH) systems further down to a diagnostic pipeline if not excluded or handled. Deep Convolutional Neural Networks (DCNNs) have achieved promising results for the detection of some WSI artifacts, however, they do not incorporate uncertainty in their predictions. This paper proposes an uncertainty-aware Deep Kernel Learning (DKL) model to detect blurry areas and folded tissues, two types of artifacts that can appear in WSIs. The proposed probabilistic model combines a CNN feature extractor and a sparse Gaussian Processes (GPs) classifier, which improves the performance of current state-of-the-art artifact detection DCNNs and provides uncertainty estimates. We achieved 0.996 and 0.938 F1 scores for blur and folded tissue detection on unseen data, respectively. In extensive experiments, we validated the DKL model on unseen data from external independent cohorts with different staining and tissue types, where it outperformed DCNNs. Interestingly, the DKL model is more confident in the correct predictions and less in the wrong ones. The proposed DKL model can be integrated into the preprocessing pipeline of CPATH systems to provide reliable predictions and possibly serve as a quality control tool.}
 }
