--- a/content/publication/2023/CMIG2/cite.bib
+++ b/content/publication/2023/CMIG2/cite.bib
@@ -1,8 +1,8 @@
-@inproceedings{lopez2023crowdsourcing,
-  title={Crowdsourcing Segmentation of Histopathological Images Using Annotations Provided by Medical Students},
-  author={L{\'o}pez-P{\'e}rez, Miguel and Morales-{\'A}lvarez, Pablo and Cooper, Lee AD and Molina, Rafael and Katsaggelos, Aggelos K},
-  booktitle={International Conference on Artificial Intelligence in Medicine},
-  pages={245--249},
-  year={2023},
-  organization={Springer}
+@article{lopez2024learning,
+  title={Learning from crowds for automated histopathological image segmentation},
+  author={L{\'o}pez-P{\'e}rez, Miguel and Morales-{\'A}lvarez, Pablo and Cooper, Lee AD and Felicelli, Christopher and Goldstein, Jeffery and Vadasz, Brian and Molina, Rafael and Katsaggelos, Aggelos K},
+  journal={Computerized Medical Imaging and Graphics},
+  pages={102327},
+  year={2024},
+  publisher={Elsevier}
 }
